--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
     "sinon": "^6.1.5"
+  },
+  "dependencies": {
+    "chalk": "^2.4.1",
+    "clear": "^0.1.0",
+    "figlet": "^1.2.0",
+    "inquirer": "^6.2.0",
+    "minimist": "^1.2.0"
   }
 }
